syntax = "proto3";

package square;

option go_package='./squareroot/squarepb/';

message SquareRootRequest {
    int32 number = 1;
}

message SquareRootResponse {
    double number_root = 1; 
}

service SquareRootService {
    // error handling 
    // this RPC will throw an exception if the sent number is negative
    // the error being sent is of type INVALID_ARGUMENTS
    rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {};
}